--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  	<div class="container-fluid">
+  	<div class="container-fluid">           
 
     <div class="collapse navbar-collapse" id="navbarNav">
 
@@ -47,8 +47,10 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
 
-    	<h1>Second Use</h1>
-
+    	<h1>
+          <a href="index.html" class="text-decoration-none text-dark">Second Use</a>
+      </h1>
+      
       <ul class="navbar-nav ms-auto">
         <li class="navbar-brand">
           <a class="nav-link" href="#"><i class="bi bi-person-circle"></i>Entrar</a>
@@ -69,31 +71,31 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Productos</a>
+          <a class="nav-link" href="productos.html">Productos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Computadoras</a>
+          <a class="nav-link" href="computadoras.html">Computadoras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Tabletas</a>
+          <a class="nav-link" href="tabletas.html">Tabletas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Drones y camaras</a>
+          <a class="nav-link" href="drones.html">Drones y camaras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Audio</a>
+          <a class="nav-link" href="Audio.html">Audio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Celulares</a>
+          <a class="nav-link" href="celulares.html">Celulares</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">T.V. y cine en casa</a>
+          <a class="nav-link" href="tv.html">T.V. y cine en casa</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Tecnologia portatil</a>
+          <a class="nav-link" href="tecnologia.html">Tecnologia portatil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Oferta</a>
+          <a class="nav-link" href="oferta.html">Oferta</a>
         </li>
       </ul>
     </div>
@@ -156,6 +158,16 @@
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
+
+<div class="card" style="width: 18rem;">
+  <img src="image/I.webp" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
 <div class="card" style="width: 18rem;">
   <img src="image/I.webp" class="card-img-top" alt="...">
   <div class="card-body">
@@ -172,14 +184,7 @@
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
-<div class="card" style="width: 18rem;">
-  <img src="image/I.webp" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
+
 	
 </div>
 	
