--- a/drones.html
+++ b/drones.html
@@ -6,7 +6,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<title>Tv y cine en casa - Second Use</title>
+	<title>Drones y Camaras - Second Use</title>
 </head>
 <body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -81,14 +81,14 @@
 
   <!-- Contenido -->
   <div class="container mt-4">
-  <h1 class="text-center mb-4">Tv y cine en casa</h1>
+  <h1 class="text-center mb-4">Drones y Camaras</h1>
   <div class="row g-4">
     <!-- Producto -->
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card h-100">
-        <img src="image/tv1.avif" class="card-img-top" alt="Audio 1">
+        <img src="image/dron1.avif" class="card-img-top" alt="Audio 1">
         <div class="card-body">
-          <p class="card-text">Shel 50" clase LED 4K UHD Smart TV</p>
+          <p class="card-text">Cámara de seguridad Shak para exteriores</p>
           <a href="#" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
@@ -97,9 +97,9 @@
     <!-- Producto -->
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card h-100">
-        <img src="image/tv2.avif" class="card-img-top" alt="Audio 2">
+        <img src="image/dron2.avif" class="card-img-top" alt="Audio 2">
         <div class="card-body">
-          <p class="card-text">Barra de sonido Bluetooth TV con conectividad HDMI</p>
+          <p class="card-text">Cámara de seguridad inalámbrica interior 1080p</p>
           <a href="#" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
@@ -108,9 +108,9 @@
     <!-- Producto -->
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card h-100">
-        <img src="image/tv3.avif" class="card-img-top" alt="Audio 3">
+        <img src="image/dron3.avif" class="card-img-top" alt="Audio 3">
         <div class="card-body">
-          <p class="card-text">Shel 40" clase LED Full HD TV inteligente</p>
+          <p class="card-text">Cuadricóptero Wave Mini 4 con mando a distancia</p>
           <a href="#" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
@@ -119,9 +119,9 @@
     <!-- Producto -->
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card h-100">
-        <img src="image/tv4.avif" class="card-img-top" alt="Audio 4">
+        <img src="image/dron4.avif" class="card-img-top" alt="Audio 4">
         <div class="card-body">
-          <p class="card-text">Proyector Wilsom Home Cinema 4K PRO-UHD 3LCD</p>
+          <p class="card-text">Cámara DSLR Pantony con objetivo 18-55mm</p>
           <a href="#" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
@@ -130,9 +130,9 @@
     <!-- Producto -->
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card h-100">
-        <img src="image/tv5.avif" class="card-img-top" alt="Audio 5">
+        <img src="image/dron5.avif" class="card-img-top" alt="Audio 5">
         <div class="card-body">
-          <p class="card-text">Allure 55" clase LED 4K UHD TV inteligente</p>
+          <p class="card-text">Drone Dji Mini 4 Pro Fly More Combo Plus (DJI RC 2) 48MP, 4K, vuelo 39 min</p>
           <a href="#" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
@@ -141,9 +141,9 @@
     <!-- Producto -->
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card h-100">
-        <img src="image/tv6.avif" class="card-img-top" alt="Audio 5">
+        <img src="image/dron6.avif" class="card-img-top" alt="Audio 5">
         <div class="card-body">
-          <p class="card-text">Miniproyector inalámbrico JP 470</p>
+          <p class="card-text">Minicámara digital impermeable</p>
           <a href="#" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
@@ -152,9 +152,9 @@
     <!-- Producto -->
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card h-100">
-        <img src="image/tv7.avif" class="card-img-top" alt="Audio 5">
+        <img src="image/dron7.avif" class="card-img-top" alt="Audio 5">
         <div class="card-body">
-          <p class="card-text">TV inteligente de alta definición de 42 pulgadas</p>
+          <p class="card-text">EXE Mini drone con controlador de cielo</p>
           <a href="#" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
@@ -163,9 +163,9 @@
     <!-- Producto -->
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card h-100">
-        <img src="image/tv8.avif" class="card-img-top" alt="Audio 5">
+        <img src="image/dron8.avif" class="card-img-top" alt="Audio 5">
         <div class="card-body">
-          <p class="card-text">TV inteligente Nano LED 4K UHD de 65 pulgadas</p>
+          <p class="card-text">Cámara digital Pantony 180 de 20,0 megapíxeles</p>
           <a href="#" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
