--- a/Audio.html
+++ b/Audio.html
@@ -81,7 +81,7 @@
 
   <!-- Contenido -->
   <div class="container mt-4">
-  <h1 class="mb-4">Audio</h1>
+  <h1 class="text-center mb-4">Audio</h1>
   <div class="row g-4">
     <!-- Producto -->
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
