avance como prueba

--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
 
-    	<h1>
-          <a href="index.html" class="text-decoration-none text-dark">Second Use</a>
-      </h1>
+      <h1 class="d-flex align-items-center gap-2">
+  <a href="index.html" class="text-decoration-none text-dark d-flex align-items-center gap-2">
+    Second Use
+    <img src="image/logo.jpeg" alt="Logo" style="height: 70px;">
+  </a>
+</h1>
+
+
       
       <ul class="navbar-nav ms-auto">
         <li class="navbar-brand">
