--- a/productos.html
+++ b/productos.html
@@ -20,7 +20,7 @@
 
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                <a class="nav-link active" href="index.html">Inicio</a>
+                <a class="nav-link active" href="index.php">Inicio</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="#">Acerca de</a>
