--- a/tabletas.html
+++ b/tabletas.html
@@ -18,7 +18,7 @@
         <i class="bi bi-box-seam-fill fs-5"></i> Envío gratis en compras de más de S/.5000
       </span>
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.php">Inicio</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Acerca de</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Asistencia</a></li>
