--- a/tv.html
+++ b/tv.html
@@ -20,7 +20,7 @@
 
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                <a class="nav-link active" href="index.html">Inicio</a>
+                <a class="nav-link active" href="index.php">Inicio</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="#">Acerca de</a>
@@ -41,7 +41,7 @@
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarNav">
       <h1>
-          <a href="index.html" class="text-decoration-none text-dark">Second Use</a>
+          <a href="index.php" class="text-decoration-none text-dark">Second Use</a>
       </h1>
       <ul class="navbar-nav ms-auto">
         <li class="navbar-brand">
