--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Inicio</a>
+          <a class="nav-link active" href="index.php">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Acerca de</a>
@@ -48,7 +48,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
 
     	<h1>
-          <a href="index.html" class="text-decoration-none text-dark">Second Use</a>
+          <a href="index.php" class="text-decoration-none text-dark">Second Use</a>
       </h1>
       
       <ul class="navbar-nav ms-auto">
@@ -153,7 +153,7 @@
 	<div class="card" style="width: 15rem;">
   <img src="image/smr.avif" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Aple watch series 11</p>
+    <p class="card-text">Apple watch series 11</p>
     <a href="#" class="btn btn-primary">Comprar</a>
   </div>
 </div>
