--- a/tv.html
+++ b/tv.html
@@ -40,16 +40,21 @@
 <nav class="navbar navbar-expand-lg navbar-white bg-white">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarNav">
-      <h1>
+      <h1 class="d-flex align-items-center gap-2">
           <a href="index.php" class="text-decoration-none text-dark">Second Use</a>
+          <img src="image/logo2.jpeg" alt="Logo" style="height: 70px;">
       </h1>
       <ul class="navbar-nav ms-auto">
         <li class="navbar-brand">
-          <a class="nav-link" href="#"><i class="bi bi-person-circle"></i> Entrar</a>
+          
         </li>
-        <li class="navbar-brand">
+        <li class="navbar-item">
           <a class="nav-link" href="#"><i class="bi bi-heart"></i> Favoritos</a>
         </li>
+
+        <li class="navbar-item">
+		          		<a class="nav-link" href="#"><i class="bi bi-cart"></i> Carrito</a>
+		    </li>
       </ul>
     </div>
   </div>
@@ -73,7 +78,7 @@
                 <li class="nav-item"><a class="nav-link" href="celulares.html">Celulares</a></li>
                 <li class="nav-item"><a class="nav-link" href="tv.html">T.V. y cine en casa</a></li>
                 <li class="nav-item"><a class="nav-link" href="tecnologia.html">Tecnología portátil</a></li>
-                <li class="nav-item"><a class="nav-link" href="oferta.html">Oferta</a></li>
+                
             </ul>
         </div>
   </div>
