--- a/drones.html
+++ b/drones.html
@@ -117,7 +117,7 @@
         <img src="image/dron1.avif" class="card-img-top" alt="Audio 1">
         <div class="card-body">
           <p class="card-text">Cámara de seguridad Shak para exteriores</p>
-          <a href="#" class="btn btn-primary w-100">Comprar</a>
+          <a href="detalle_producto.php?id=11" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
     </div>
@@ -128,7 +128,7 @@
         <img src="image/dron2.avif" class="card-img-top" alt="Audio 2">
         <div class="card-body">
           <p class="card-text">Cámara de seguridad inalámbrica interior 1080p</p>
-          <a href="#" class="btn btn-primary w-100">Comprar</a>
+          <a href="detalle_producto.php?id=13" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
     </div>
@@ -139,7 +139,7 @@
         <img src="image/dron3.avif" class="card-img-top" alt="Audio 3">
         <div class="card-body">
           <p class="card-text">Cuadricóptero Wave Mini 4 con mando a distancia</p>
-          <a href="#" class="btn btn-primary w-100">Comprar</a>
+          <a href="detalle_producto.php?id=14" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
     </div>
@@ -150,7 +150,7 @@
         <img src="image/dron4.avif" class="card-img-top" alt="Audio 4">
         <div class="card-body">
           <p class="card-text">Cámara DSLR Pantony con objetivo 18-55mm</p>
-          <a href="#" class="btn btn-primary w-100">Comprar</a>
+          <a href="detalle_producto.php?id=15" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
     </div>
@@ -161,7 +161,7 @@
         <img src="image/dron5.avif" class="card-img-top" alt="Audio 5">
         <div class="card-body">
           <p class="card-text">Drone Dji Mini 4 Pro Fly More Combo Plus (DJI RC 2) 48MP, 4K, vuelo 39 min</p>
-          <a href="#" class="btn btn-primary w-100">Comprar</a>
+          <a href="detalle_producto.php?id=16" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
     </div>
@@ -172,7 +172,7 @@
         <img src="image/dron6.avif" class="card-img-top" alt="Audio 5">
         <div class="card-body">
           <p class="card-text">Minicámara digital impermeable</p>
-          <a href="#" class="btn btn-primary w-100">Comprar</a>
+          <a href="detalle_producto.php?id=17" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
     </div>
@@ -183,7 +183,7 @@
         <img src="image/dron7.avif" class="card-img-top" alt="Audio 5">
         <div class="card-body">
           <p class="card-text">EXE Mini drone con controlador de cielo</p>
-          <a href="#" class="btn btn-primary w-100">Comprar</a>
+          <a href="detalle_producto.php?id=18" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
     </div>
@@ -194,7 +194,7 @@
         <img src="image/dron8.avif" class="card-img-top" alt="Audio 5">
         <div class="card-body">
           <p class="card-text">Cámara digital Pantony 180 de 20,0 megapíxeles</p>
-          <a href="#" class="btn btn-primary w-100">Comprar</a>
+          <a href="detalle_producto.php?id=19" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
     </div>
