--- a/tabletas.html
+++ b/tabletas.html
@@ -83,7 +83,7 @@
             <div class="card-body">
           <h5 class="card-title">iPad Pro 13” (M4)</h5>
           <p class="card-text">Potente, ligera y con pantalla Ultra Retina XDR.</p>
-          <a href="#" class="btn btn-primary w-100">Comprar</a>
+          <a href="detalle_producto.php?id=26" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
     </div>
@@ -95,7 +95,7 @@
             <div class="card-body">
           <h5 class="card-title">Xiaomi Pad 6</h5>
           <p class="card-text">Pantalla 144Hz, Snapdragon 8+, gran batería de 8840 mAh.</p>
-          <a href="#" class="btn btn-primary w-100">Comprar</a>
+          <a href="detalle_producto.php?id=22" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
     </div>
@@ -107,7 +107,7 @@
         <div class="card-body">
           <h5 class="card-title">Samsung Galaxy Tab S9</h5>
           <p class="card-text">Pantalla AMOLED, resistente al agua y con S Pen incluido.</p>
-          <a href="#" class="btn btn-primary w-100">Comprar</a>
+          <a href="detalle_producto.php?id=28" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
     </div>
@@ -117,9 +117,9 @@
       <div class="card h-100">
         <img src="image/tablet4.webp" class="card-img-top" alt="Lenovo Tab P11 Pro">
         <div class="card-body">
-          <h5 class="card-title">Lenovo Tab P11 Pro Gen 2</h5>
+          <h5 class="card-title">Tablet LENOVO 11" K11 8GB 128GB</h5>
           <p class="card-text">Ideal para trabajo y entretenimiento con teclado desmontable.</p>
-          <a href="#" class="btn btn-primary w-100">Comprar</a>
+          <a href="detalle_producto.php?id=25" class="btn btn-primary w-100">Comprar</a>
         </div>
       </div>
     </div>
