--- a/productos.html
+++ b/productos.html
@@ -97,8 +97,8 @@
 					<img src="image/I.webp" class="card-img-top" alt="...">
 					<div class="card-body">
 						<h5 class="card-title">iPhone 17 Pro Max</h5>
-						<p class="card-text">Rendimiento fuera de serie.</p>
-						<a href="detalle_producto.php" class="btn btn-primary w-100">Ver detalles</a>
+						<p class="card-text">Pantalla Super Retina XDR de 6.9 pulgadas, procesador A19 Pro y una cámara teleobjetivo con un zoom óptico de 8x.</p>
+						<a href="detalle_producto.php?id=1" class="btn btn-primary w-100">Ver detalles</a>
 					</div>
 				</div>
 			</div>
@@ -109,8 +109,8 @@
 					<img src="image/audi.jpg" class="card-img-top" alt="...">
 					<div class="card-body">
 						<h5 class="card-title">Audífonos Sony WH-1000XM5</h5>
-						<p class="card-text">Sonido superior y cancelación de ruido.</p>
-						<a href="detalle_producto.php" class="btn btn-primary w-100">Ver detalles</a>
+						<p class="card-text">Audífonos Noise Cancelling con Bluetooth WH-1000XM5.</p>
+						<a href="detalle_producto.php?id=2" class="btn btn-primary w-100">Ver detalles</a>
 					</div>
 				</div>
 			</div>
@@ -122,7 +122,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Xiaomi Pad 6</h5>
 						<p class="card-text">Pantalla 144Hz, Snapdragon 8+, gran batería de 8840 mAh.</p>
-						<a href="#" class="btn btn-primary w-100">Ver detalles</a>
+						<a href="detalle_producto.php?id=22" class="btn btn-primary w-100">Ver detalles</a>
 					</div>
 				</div>
 			</div>
@@ -132,9 +132,9 @@
                <div class="card h-100">
                    <img src="image/laptop4.avif" class="card-img-top" alt="HP Pavilion">
                    <div class="card-body">
-                       <h5 class="card-title">HP Pavilion 14</h5>
+                       <h5 class="card-title">Laptop HP Pavilion 14-dv0502la</h5>
                        <p class="card-text">Ideal para oficina y estudio. Intel i5, SSD de 256GB.</p>
-                       <a href="#" class="btn btn-primary w-100">Ver detalles</a>
+                       <a href="detalle_producto.php?id=23" class="btn btn-primary w-100">Ver detalles</a>
                    </div>
                </div>
            </div>
@@ -146,8 +146,10 @@
                     <img src="image/laptop3.jpeg" class="card-img-top" alt="Asus ROG Strix">
                     <div class="card-body">
                         <h5 class="card-title">Asus ROG Strix G17</h5>
-                        <p class="card-text">Laptop gamer con Ryzen 9 y RTX 4070.</p>
-                        <a href="#" class="btn btn-primary w-100">Ver detalles</a>
+                        <p class="card-text">Laptop gamer con Ryzen 9 y RTX 4070. 
+                            16GB DDR5-5600 SO-DIMM (Expandible a 64GB)
+                        </p>
+                        <a href="detalle_producto.php?id=24" class="btn btn-primary w-100">Ver detalles</a>
                     </div>
                 </div>
             </div>
@@ -158,9 +160,9 @@
                 <div class="card h-100">
                     <img src="image/tablet4.webp" class="card-img-top" alt="Lenovo Tab P11 Pro">
                     <div class="card-body">
-                        <h5 class="card-title">Lenovo Tab P11 Pro Gen 2</h5>
+                        <h5 class="card-title">Tablet LENOVO 11" K11 8GB 128GB</h5>
                         <p class="card-text">Ideal para trabajo y entretenimiento con teclado desmontable.</p>
-                        <a href="#" class="btn btn-primary w-100">Ver detalles</a>
+                        <a href="detalle_producto.php?id=25" class="btn btn-primary w-100">Ver detalles</a>
                     </div>
                 </div>
             </div>
@@ -174,6 +176,14 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
+<div>
+<?php include 'footer.php'; ?>
+</div>
+
+
+
+
 
 
 </body>
