--- a/index.html
+++ b/index.html
@@ -71,31 +71,31 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="productos.html">Productos</a>
+          <a class="nav-link" href="productos.php">Productos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="computadoras.html">Computadoras</a>
+          <a class="nav-link" href="computadoras.php">Computadoras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="tabletas.html">Tabletas</a>
+          <a class="nav-link" href="tabletas.php">Tabletas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="drones.html">Drones y camaras</a>
+          <a class="nav-link" href="drones.php">Drones y camaras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Audio.html">Audio</a>
+          <a class="nav-link" href="audio.php">Audio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="celulares.html">Celulares</a>
+          <a class="nav-link" href="celulares.php">Celulares</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="tv.html">T.V. y cine en casa</a>
+          <a class="nav-link" href="tv.php">T.V. y cine en casa</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="tecnologia.html">Tecnologia portatil</a>
+          <a class="nav-link" href="tecnologia.php">Tecnologia portatil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="oferta.html">Oferta</a>
+          <a class="nav-link" href="oferta.php">Oferta</a>
         </li>
       </ul>
     </div>
